--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/GotaLogo.png">
+
+  <!-- Íconos para Android -->
+  <link rel="icon" type="image/png" sizes="192x192" href="/GotaLogo.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/GotaLogo.png">
+  
+  <!-- Ícono para iOS -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/GotaLogo.png">
+
 </head>
 <body>
   <app-root></app-root>
